--- a/notebooks/Section1_1-Basic_Bayes.ipynb
+++ b/notebooks/Section1_1-Basic_Bayes.ipynb
@@ -487,7 +487,7 @@
     "\n",
     "with radon_model:\n",
     "    \n",
-    "    samples = sample(1000, tune=1000, random_seed=RANDOM_SEEDS)"
+    "    samples = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
    ]
   },
   {
