--- a/notebooks/Section1_1-Basic_Bayes.ipynb
+++ b/notebooks/Section1_1-Basic_Bayes.ipynb
@@ -1001,7 +1001,7 @@
    "source": [
     "## Exercise: Two Groups with Binary Outcome\n",
     "\n",
-    "Now that we have seen how to generalize normally-distributed data to another distribution, we are equipped to analyze other data types. Binary outcomes are common in clinical research: \n",
+    "Now that we have seen how to generalize normally-distributed data to another distribution, try our hand with another data type. Binary outcomes are common in clinical research: \n",
     "\n",
     "- survival/death\n",
     "- true/false\n",
@@ -1012,11 +1012,7 @@
     "\n",
     "$$f(x \\mid p) = p^{x} (1-p)^{1-x}$$\n",
     "\n",
-    "Such events are sometimes reported as sums of individual events, such as the number of individuals in a group who test positive for a condition of interest. Sums of Bernoulli events are distributed as **binomial** random variables.\n",
-    "\n",
-    "$$f(x \\mid n, p) = \\binom{n}{x} p^x (1-p)^{n-x}$$\n",
-    "\n",
-    "The parameter in both models is $p$, the probability of the occurrence of an event. In terms of inference, we are typically interested in whether $p$ is larger or smaller in one group relative to another.\n",
+    "In terms of inference, we are typically interested in whether $p$ is larger or smaller in one group relative to another.\n",
     "\n",
     "To demonstrate the comparison of two groups with binary outcomes using Bayesian inference, we will use a sample pediatric dataset. Data on 671 infants with very low (<1600 grams) birth weight from 1981-87 were collected at Duke University Medical Center. Of interest is the relationship between the outcome intra-ventricular hemorrhage (IVH) and predictor such as birth weight, gestational age, presence of pneumothorax and mode of delivery."
    ]
@@ -1045,7 +1041,7 @@
     "editable": true
    },
    "source": [
-    "To demonstrate binary data analysis, we will try to estimate the difference between the probability of an intra-ventricular hemorrhage for infants with a pneumothorax. "
+    "To demonstrate binary data analysis, we will try to estimate the difference between the probability of an intra-ventricular hemorrhage for infants with and without a pneumothorax. "
    ]
   },
   {
@@ -1105,403 +1101,6 @@
    "outputs": [],
    "source": [
     "# Write your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### Prior choice\n",
-    "\n",
-    "What should we choose as a prior distribution for $p$?\n",
-    "\n",
-    "We could stick with a normal distribution, but note that the value of $p$ is **constrained** by the laws of probability. Namely, we cannot have values smaller than zero nor larger than one. So, choosing a normal distribution will result in ascribing positive probability to unsupported values of the parameter. In many cases, this will still work in practice, but will be inefficient for calculating the posterior and will not accurately represent the prior information about the parameter.\n",
-    "\n",
-    "A common choice in this context is the **beta distribution**, a continuous distribution with 2 parameters and whose support is on the unit interval:\n",
-    "\n",
-    "$$ f(x \\mid \\alpha, \\beta) = \\frac{x^{\\alpha - 1} (1 - x)^{\\beta - 1}}{B(\\alpha, \\beta)}$$\n",
-    "\n",
-    "- Support: $x \\in (0, 1)$\n",
-    "- Mean: $\\dfrac{\\alpha}{\\alpha + \\beta}$\n",
-    "- Variance: $\\dfrac{\\alpha \\beta}{(\\alpha+\\beta)^2(\\alpha+\\beta+1)}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pymc3 import Beta\n",
-    "\n",
-    "params = (5, 1), (1, 3), (5, 5), (0.5, 0.5), (1, 1)\n",
-    "\n",
-    "fig, axes = plt.subplots(1, len(params), figsize=(14, 4), sharey=True)\n",
-    "for ax, (alpha, beta) in zip(axes, params):\n",
-    "    sns.distplot(Beta.dist(alpha, beta).random(size=10000), ax=ax, kde=False)\n",
-    "    ax.set_xlim(0, 1)\n",
-    "    ax.set_title(r'$\\alpha={0}, \\beta={1}$'.format(alpha, beta));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "So let's use a beta distribution to model our prior knowledge of the probabilities for both groups. Setting $\\alpha = \\beta = 1$ will result in a uniform distribution of prior mass:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "with Model() as ivh_model:\n",
-    "    \n",
-    "    p = Beta('p', 1, 1, shape=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "We can now use `p` as the parameter of our Bernoulli likelihood. Here, `x` is a vector of zeros an ones, which will extract the approproate group probability for each subject:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pymc3 import Bernoulli\n",
-    "\n",
-    "with ivh_model:\n",
-    "    \n",
-    "    bb_like = Bernoulli('bb_like', p=p[x], observed=ivh)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Finally, since we are interested in the difference between the probabilities, we will keep track of this difference:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "with ivh_model:\n",
-    "    \n",
-    "    p_diff = Deterministic('p_diff', p[1] - p[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with ivh_model:\n",
-    "    ivh_trace = sample(1000, init=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_posterior(ivh_trace[100:], var_names=['p']);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "We can see that the probability that `p` is larger for the pneumothorax with probability one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_posterior(ivh_trace[100:], var_names=['p_diff'], ref_val=0);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "As a final demonstration, let's make this analysis slightly more realistic. Since these are observational data, its probably a bad idea to compare group probabilities without correcting them for **confounding variables**. Individuals may have systematic differences between groups that may explain the difference in observed outcomes that have nothing to do with group membership itself. \n",
-    "\n",
-    "For example, perhaps lower birthweight accounts for the difference, since birthweight is nominally lower in the pneumothorax group:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "vlbw.groupby('pneumo').bwt.mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Let's add birth weight as a predictor to our model (but first we will standardize it to aid interpretation and for numerical stability):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "bwt_norm = (vlbw.bwt - vlbw.bwt.mean()) / vlbw.bwt.std()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "How do we add a continuous covariate to this model?\n",
-    "\n",
-    "The easiest way to do so is to change the formulation of the model to that of a **generalized linear model (GLM)**. What this does is create a regression model to predict the latent probability of IVH for each individual. \n",
-    "\n",
-    "$$p_i = \\mu + \\alpha * \\text{bwt}_i + \\beta * \\text{pneumo}_i$$\n",
-    "\n",
-    "here, $\\mu$ is a baseline probability, $\\alpha$ is a coefficient for centered birthweight, and $\\beta$ is a coefficient for pneumothorax.\n",
-    "\n",
-    "However, this presents a problem as formulated: its very easy to generate combinations of $\\mu$, $\\alpha$, and $\\beta$ that generate values outside the $(0,1)$ interval. To avoid this, we must **transform** this sum in such a way that the unit interval constraint is guaranteed.\n",
-    "\n",
-    "One such transformation is the **logit**:\n",
-    "\n",
-    "$$x = \\text{logit}(p) = \\log\\left[\\frac{p}{1-p}\\right]$$\n",
-    "\n",
-    "the inverse of this function maps real values of $x$ to values of $p$ on the unit interval:\n",
-    "\n",
-    "$$p = \\text{invlogit}(x) = \\frac{1}{1 + \\exp(-x)}$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "x_range = np.linspace(-7,7)\n",
-    "plt.plot(x_range, 1/(1+np.exp(-x_range)))\n",
-    "plt.xlabel('x')\n",
-    "plt.ylabel('p');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "To convert our original model to a GLM, we need to specify priors for the linear model coefficients:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with Model() as ivh_glm:\n",
-    "    \n",
-    "    μ = Normal('μ', 0, sd=5)\n",
-    "    α = Normal('α', 0, sd=5)\n",
-    "    β = Normal('β', 0, sd=5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Then, apply the `invlogit` transformation to the linear combination of predictors.\n",
-    "\n",
-    "The likelihood stays the same."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "from pymc3.math import invlogit\n",
-    "\n",
-    "with ivh_glm:\n",
-    "        \n",
-    "    p = invlogit(μ + α*bwt_norm + β*x)\n",
-    "    \n",
-    "    bb_like = Bernoulli('bb_like', p=p, observed=ivh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with ivh_glm:\n",
-    "    trace_glm = sample(1000, chains=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "We can see that the estimate for $\\alpha$ is negative, indicating that higher birth weight reduces the baseline probability of IVH. \n",
-    "\n",
-    "The coefficient for $\\beta$ is strongly positive."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_posterior(trace_glm[100:], var_names=['μ', 'α', 'β']);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "How might we represent the effect of pneumothorax as a quantity on the probability scale, to aid interpretation?"
    ]
   },
   {
