Tinkering with time series

--- a/notebooks/Section4_1-Bayesian_Time_Series.ipynb
+++ b/notebooks/Section4_1-Bayesian_Time_Series.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "warnings.simplefilter('ignore')\n",
     "\n",
-    "RANDOM_SEEDS = 20090425, 20180125"
+    "RANDOM_SEED = 20090425"
    ]
   },
   {
@@ -603,6 +603,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice that the estimate of $\\rho_1$ is close to zero, which is understandable since the data was simulated from an AR(1) model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Adding a moving average: ARMA\n",
     "\n",
     "More complex time series models are typically achieved by adding other components to the basic autoregressive model. \n",
@@ -807,14 +814,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the estimate of $\\rho_1$ is close to zero, which is understandable since the data was simulated from an AR(1) model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bayesian Structural Time Series Models"
+    "## Bayesian Structural Time Series Models\n",
+    "\n",
+    "**Go ahead and run this model while you read--it takes a few minutes to fit.**"
    ]
   },
   {
@@ -939,6 +941,8 @@
    "source": [
     "### Explicit seasonality model\n",
     "\n",
+    "**Go ahead and run this model while you read--it takes a few minutes to fit.**\n",
+    "\n",
     "The basic structured time series model was problematic to fit partly because it is trying to do a lot. It is obvious that there is a periodic effect in the data-generatimg model, and we are trying to make the autoregressive component account for this as well as the (linear?) trend in the mean that is independent of the seasonality.\n",
     "\n",
     "Thus, it is wise to add an explicit seasonality component to the model, which will allow the AR(1) component to look after the trend. There are several commonly used state-component models to capture seasonality. \n",
@@ -979,7 +983,8 @@
     "    \n",
     "    # Standard deviations\n",
     "    σ_η = pm.HalfNormal('σ_η', 25)\n",
-    "    η = pm.Normal('η', sigma=σ_η, shape=S)\n",
+    "    z_η = pm.Normal('z_η', shape=S)\n",
+    "    η = pm.Deterministic('η', z_η * σ_η)\n",
     "    \n",
     "    # State dynamics\n",
     "    σ_μ = pm.HalfNormal('σ_μ', 25)\n",
@@ -1005,7 +1010,9 @@
     "with ts_model_seasonal:\n",
     "    \n",
     "    # Seasonality\n",
-    "    τ = pm.Normal('τ', sigma=25, shape=S-1)\n",
+    "    σ_τ = pm.HalfNormal('σ_τ', 25)\n",
+    "    z_τ = pm.Normal('z+τ', shape=S-1)\n",
+    "    τ = pm.Deterministic('τ', z_τ * σ_τ)\n",
     "    s = tt.concatenate([[-1*tt.sum(τ)], τ]*n_years) + tt.repeat(η, S)\n",
     "    \n",
     "    # Likelihood\n",
@@ -1029,7 +1036,7 @@
    "outputs": [],
    "source": [
     "with ts_model_seasonal:\n",
-    "    trace = pm.sample(1000, tune=2000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    trace = pm.sample(1000, tune=2000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
