Added GP notebooks; updates to survival notebook

--- a/notebooks/Section4_2-Survival_Models.ipynb
+++ b/notebooks/Section4_2-Survival_Models.ipynb
@@ -99,20 +99,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "blue, _, red = sns.color_palette()[:3]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,26 +309,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implemented in PyMC3, this is:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
    "source": [
-    "## program log likelihood\n",
-    "\n",
+    "```python\n",
     "def logp(event):\n",
     "    return (event*(tt.log(α) + tt.log(λ) \n",
     "                   + tt.log(tt.exp(β*np.array(metast)))\n",
     "                   + (α-1)*tt.log(np.array(time))) \n",
     "            - (λ*tt.exp(β*np.array(metast)) \n",
-    "                   * np.array(time)**α)\n",
+    "                   * np.array(time)**α))\n",
     "    \n",
-    "    survival = pm.DensityDist('survival', logp, observed={'event':event})"
+    "survival = pm.DensityDist('survival', logp, observed={'event':event})\n",
+    "```"
    ]
   },
   {
@@ -451,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_iterations = 2000\n",
+    "n_iterations = 1000\n",
     "n_tune = 1000"
    ]
   },
@@ -467,13 +457,17 @@
    "outputs": [],
    "source": [
     "with Model() as weibull_model:\n",
-    "    α = pm.HalfCauchy(\"α\", 1)\n",
+    "    \n",
     "    # Weibull shape parameter\n",
-    "    λ = pm.HalfCauchy(\"λ\", 1)\n",
+    "    α = pm.HalfCauchy(\"α\", 1)\n",
+    "    \n",
     "    # Effects of metastisis\n",
-    "    β = pm.Normal('β', 0, 100)\n",
+    "    λ = pm.HalfCauchy(\"λ\", 1)\n",
+    "    \n",
     "    # Weibull scales\n",
-    "    linear = pm.Deterministic('linear', tt.exp(β*metast))\n",
+    "    β = pm.Normal('β', 0, 100)\n",
+    "    \n",
+    "    linear = tt.exp(β*metast)\n",
     "\n",
     "    # Weibull survival likelihood, accounting for censoring\n",
     "    def logp(event):\n",
@@ -481,6 +475,7 @@
     "                      + (α-1)*tt.log(np.array(time))) - (λ*linear * np.array(time)**α)\n",
     "    \n",
     "    survival = pm.DensityDist('survival', logp, observed={'event':event})\n",
+    "    \n",
     "    weibull_trace = pm.sample(n_iterations, tune=n_tune, cores=2)"
    ]
   },
@@ -863,7 +858,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Write your answer here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -874,7 +871,9 @@
     "\n",
     "Ibrahim, Joseph G., Ming‐Hui Chen, and Debajyoti Sinha. Bayesian survival analysis. John Wiley & Sons, Ltd, 2005.\n",
     "\n",
-    "Klein, John P., Moeschberger, Melvin L. Survival Analysis: Techniques for Censored and Truncated Data Second Edition. Springer, 2003.\n"
+    "Klein, John P., Moeschberger, Melvin L. Survival Analysis: Techniques for Censored and Truncated Data Second Edition. Springer, 2003.\n",
+    "\n",
+    "[Survival Distributions, Hazard Functions, Cumulative Hazards](https://web.stanford.edu/~lutian/coursepdf/unit1.pdf)"
    ]
   }
  ],
