Minor cleanup of hierarchical models

--- a/notebooks/Section1_2-Hierarchical_Models.ipynb
+++ b/notebooks/Section1_2-Hierarchical_Models.ipynb
@@ -71,7 +71,7 @@
     "# Import radon data\n",
     "radon_data = pd.read_csv('../data/radon.csv', index_col=0)\n",
     "\n",
-    "RANDOM_SEEDS = 20090425, 19700903"
+    "RANDOM_SEED = 20090425"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "outputs": [],
    "source": [
     "with pooled_model:\n",
-    "    pooled_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    pooled_trace = sample(1000, tune=1000, cores=2)"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "with unpooled_model:\n",
-    "    unpooled_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    unpooled_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "source": [
     "from arviz import plot_forest\n",
     "\n",
-    "_, (ax,) = plot_forest(unpooled_trace, var_names=['β0'])\n",
+    "(ax,) = plot_forest(unpooled_trace, var_names=['β0'])\n",
     "ax.set_yticklabels([\"\"]);"
    ]
   },
@@ -393,7 +393,7 @@
    "outputs": [],
    "source": [
     "with partial_pooling:\n",
-    "    partial_pooling_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    partial_pooling_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "outputs": [],
    "source": [
     "with varying_intercept:\n",
-    "    varying_intercept_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    varying_intercept_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax,) = plot_forest(varying_intercept_trace, var_names=['a'])\n",
+    "(ax,) = plot_forest(varying_intercept_trace, var_names=['a'])\n",
     "ax.set_yticklabels([\"\"]);"
    ]
   },
@@ -640,7 +640,7 @@
    "outputs": [],
    "source": [
     "with varying_slope:\n",
-    "    varying_slope_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    varying_slope_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -649,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, (ax,) = plot_forest(varying_slope_trace, var_names=['b'])\n",
+    "(ax,) = plot_forest(varying_slope_trace, var_names=['b'])\n",
     "ax.set_yticklabels([\"\"]);"
    ]
   },
@@ -774,7 +774,7 @@
    "outputs": [],
    "source": [
     "with varying_slope_noncentered:\n",
-    "    noncentered_trace = sample(1000, tune=2000, cores=2)"
+    "    noncentered_trace = sample(1000, tune=2000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -876,7 +876,7 @@
    "outputs": [],
    "source": [
     "with varying_intercept_slope:\n",
-    "    varying_intercept_slope_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    varying_intercept_slope_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -988,7 +988,7 @@
    "outputs": [],
    "source": [
     "with hierarchical_intercept:\n",
-    "    hierarchical_intercept_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    hierarchical_intercept_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -1083,7 +1083,7 @@
    "outputs": [],
    "source": [
     "with contextual_effect:\n",
-    "    contextual_effect_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    contextual_effect_trace = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -1198,7 +1198,7 @@
    "outputs": [],
    "source": [
     "with contextual_pred:\n",
-    "    contextual_pred_trace = sample(2000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    contextual_pred_trace = sample(2000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -1308,7 +1308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
