--- a/notebooks/Section1_1-Basic_Bayes.ipynb
+++ b/notebooks/Section1_1-Basic_Bayes.ipynb
@@ -267,7 +267,7 @@
     "import seaborn as sns\n",
     "sns.set_context('notebook')\n",
     "\n",
-    "RANDOM_SEEDS = 20090425, 19700903"
+    "RANDOM_SEED = 20090425"
    ]
   },
   {
@@ -487,7 +487,7 @@
     "\n",
     "with radon_model:\n",
     "    \n",
-    "    samples = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEEDS)"
+    "    samples = sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -945,7 +945,7 @@
    "source": [
     "with drug_model:\n",
     "    \n",
-    "    drug_trace = sample(1000)"
+    "    drug_trace = sample(1000, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -1134,7 +1134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
