Added prior check to hierarhcial models notebook

--- a/notebooks/Section1_2-Hierarchical_Models.ipynb
+++ b/notebooks/Section1_2-Hierarchical_Models.ipynb
@@ -160,6 +160,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before sampling, it is useful to conduct **prior predictive checks** to ensure that our priors are appropriate, and do not unduly constrain inference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymc3 import sample_prior_predictive\n",
+    "\n",
+    "with pooled_model:\n",
+    "    \n",
+    "    prior_checks = sample_prior_predictive(samples=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(\n",
+    "    [0, 1], \n",
+    "    [prior_checks[\"β\"][:, 0], prior_checks[\"β\"][:, 1]],\n",
+    "    \"ok\",\n",
+    "    alpha=0.2)\n",
+    "plt.xlabel(\"Floor measurement location\")\n",
+    "plt.xticks([0,1], [\"Basement\", \"Floor\"])\n",
+    "plt.ylabel(\"Mean log radon level\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These look fine--they allow for any radon values that we would reasonably expect to see in the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
