Added hare example to TS notebook

--- a/notebooks/Section4_1-Bayesian_Time_Series.ipynb
+++ b/notebooks/Section4_1-Bayesian_Time_Series.ipynb
@@ -444,6 +444,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with pm.Model() as stochastic_vol_model:\n",
+    "    step_size = pm.Exponential('step_size', 10)\n",
+    "    volatility = pm.GaussianRandomWalk('volatility', sigma=step_size, shape=len(returns))\n",
+    "    nu = pm.Exponential('nu', 0.1)\n",
+    "    y = pm.StudentT('y', \n",
+    "                    nu=nu, \n",
+    "                    lam=np.exp(-2*volatility), \n",
+    "                    observed=returns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.model_to_graphviz(stochastic_vol_model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with stochastic_vol_model:\n",
+    "    trace = pm.sample(2000, tune=2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(14, 4))\n",
+    "\n",
+    "y_vals = np.exp(trace['volatility'])[::5].T\n",
+    "x_vals = np.vstack([returns.index for _ in y_vals.T]).T.astype(np.datetime64)\n",
+    "\n",
+    "plt.plot(x_vals, y_vals, 'k', alpha=0.002)\n",
+    "ax.set_xlim(x_vals.min(), x_vals.max())\n",
+    "ax.set_ylim(bottom=0)\n",
+    "ax.set(title='Estimated volatility over time', xlabel='Date', ylabel='Volatility');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Write your answer here"
    ]
   },
@@ -464,7 +516,7 @@
     "   \n",
     "where $\\epsilon_t \\overset{iid}{\\sim} {\\cal N}(0,1)$. In the case of the GRW, the parameter $\\rho$ is fixed to 1; consequentially, the random increments alone drive the evolution of the state (hence the name, \"random walk\"). \n",
     "\n",
-    "The form above is also a specific subclass of autoregressive model, the first-order autoregressive, or AR(1), process. This is a Marovian model because the next state is a function only of the current state. \n",
+    "The form above is also a specific subclass of autoregressive model, the first-order autoregressive, or AR(1), process. This is a Markovian model because the next state is a function only of the current state. \n",
     "\n",
     "A yet more general form of autoregressive model is the nth-order autoregressive process, AR(n):\n",
     "\n",
@@ -622,7 +674,7 @@
     "\n",
     "$$y_{t}=c+\\varepsilon_{t}+\\theta_{1} \\varepsilon_{t-1}$$\n",
     "\n",
-    "This is homologous to smoothing, but a moving average model is used for forecasting future values, whereas moving average smoothing is used for estimating the trend-cycle of past values.\n",
+    "This is homologous to smoothing, but a moving average model is used for forecasting future values, whereas smoothing is used for estimating the trend-cycle of past values.\n",
     "\n",
     "The motivation for the MA model is that we can explain shocks in the error process directly by fitting a model to the error terms.\n",
     "\n",
@@ -641,7 +693,7 @@
     "\n",
     "$$y_{t}=c+\\phi_{1} y_{t-1}+\\cdots+\\phi_{p} y_{t-p}+\\theta_{1} \\varepsilon_{t-1}+\\cdots+\\theta_{q} \\varepsilon_{t-q}+\\varepsilon_{t}$$\n",
     "\n",
-    "Why would we want such similar components in the same model? The AR process accounts for trends in the stochastic process, while the MA component will soak up unexpected events in the time series.\n",
+    "Why would we want such similar components in the same model? The AR process accounts for **trends** in the stochastic process, while the MA component will soak up **unexpected events** in the time series.\n",
     "\n",
     "A common data transformation that is applied to non-stationary time series to render them stationary is **differencing**. The differenced series is the change between consecutive observations in the original series, and can be written as\n",
     "\n",
@@ -665,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try to fit an ARMA model to a sample dataset. We will use a common time series dataset, which is jsut a summary of monthly totals of international airline passengers between 1949 to 1960."
+    "Let's try to fit an ARMA model to a sample dataset. We will use a common time series dataset, which is just a summary of monthly totals of international airline passengers between 1949 to 1960."
    ]
   },
   {
@@ -823,7 +875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another approach to time series modeling involves the use of **state-space models**, which has its origins in control engineering. For example, in navigation systems one requires continuous updating of a user's position, based on noisy data. This is analogous to what tiem series models try to do: make inferences about a latent state, based on a sequence of data. In this context, they are known as **structural time series models**. They are generally more transparent than ARIMA-type models because it is not based on autoregression or moving averages, which are not intuitive, and they are flexible and modular, making them widely-applicable to a variety of settings.\n",
+    "Another approach to time series modeling involves the use of **state-space models**, which has its origins in control engineering. For example, in navigation systems one requires continuous updating of a user's position, based on noisy data. This is analogous to what time series models try to do: make inferences about a *latent state*, based on a sequence of data. In this context, they are known as **structural time series models**. They are generally more transparent than ARIMA-type models because it is not based on autoregression or moving averages, which are not intuitive, and they are flexible and modular, making them widely-applicable to a variety of settings.\n",
     "\n",
     "The modularity of structural time series models is their key feature. Specifically, they are comprised of an **observation equation** that specifies how the data are related to the unobserved state, and a **state dynamics equation**, which describes how the latent state evolves over time.\n",
     "\n",
@@ -839,7 +891,7 @@
     "\n",
     "$$\\mu_{t+1} = \\mu_t + \\beta X_t + S_t + \\eta_t$$\n",
     "\n",
-    "The state dynamics euqtion models the temporal dynamics of the baseline mean $\\mu_t$, and is sometimes called the **unobserved trend**, since we never observe $\\mu$ (though it is typically what we want to infer about). Thus, we are assuming that the state is somehow changing over time.\n",
+    "The state dynamics equation models the temporal dynamics of the baseline mean $\\mu_t$, and is sometimes called the **unobserved trend**, since we never observe $\\mu$ (though it is typically what we want to infer about). Thus, we are assuming that the state is somehow changing over time.\n",
     "\n",
     "This regession component optionally models the influence of a set of predictor variables $X_t$, as well as a seasonality component $S_t$ on an observed time series of data $\\{y_t\\}$.\n",
     "\n",
@@ -855,13 +907,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "T = air_passengers.shape[0]\n",
-    "S = 12"
+    "### Example: Snowshoe hare population dynamics\n",
+    "\n",
+    "We can use structural time series modeling to create a phenominalogical model of Showshoe hare (*Lepus americanus*) data. We will use a dataset consisting of 7 years of regular counts as our time series, modeling the latent population and the observation process simultaneously."
    ]
   },
   {
@@ -870,15 +921,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pm.Model() as ts_model:\n",
+    "hare_data = pd.read_excel('../data/4_Controls Hare Live trap data Kluane.xlsx', \n",
+    "              sheet_name='Silver Old 10x10 overview', usecols=['date', '# Checks', '# Indiv'],\n",
+    "             parse_dates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hare_data.plot('date', '# Indiv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = hare_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model() as hare_model:\n",
     "    \n",
-    "    σ_ar = pm.HalfNormal('σ_ar', 25)\n",
+    "    σ_ar = pm.HalfNormal('σ_ar', 1)\n",
     "    \n",
-    "    ρ = pm.Normal('ρ', 0, sigma=1)\n",
+    "    ρ = pm.Normal('ρ', 1, sigma=1)\n",
     "    μ = pm.AR('μ', ρ, sigma=σ_ar, shape=T)\n",
-    "    \n",
-    "    σ_y = pm.HalfNormal('σ_y', 25)\n",
-    "    like = pm.Normal('like', μ, sigma=σ_y, observed=air_passengers.values.ravel())"
+    "        \n",
+    "    α = pm.HalfNormal('α', 1)\n",
+    "    like = pm.NegativeBinomial('like', mu=pm.math.exp(μ), alpha=α, observed=hare_data['# Indiv'].values)\n"
    ]
   },
   {
@@ -887,7 +967,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm.model_to_graphviz(ts_model)"
+    "pm.model_to_graphviz(hare_model)"
    ]
   },
   {
@@ -896,8 +976,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with ts_model:\n",
-    "    trace = pm.sample(1000, tune=3000, cores=2)"
+    "with hare_model:\n",
+    "    trace = pm.sample(1000, tune=1000, cores=2, random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -906,7 +986,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "az.plot_trace(trace, var_names=['σ_ar', 'σ_y']);"
+    "az.plot_trace(trace, var_names=['σ_ar', 'α', 'ρ']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(10,6))\n",
+    "(pd.DataFrame(np.exp(trace['μ'].mean(0)), index=hare_data.date)\n",
+    "      .plot(legend=False, color='Green', ax=ax))\n",
+    "(pd.DataFrame(np.quantile(np.exp(trace['μ']), [0.05, 0.95], axis=0).T, index=hare_data.date)\n",
+    "      .plot(legend=False, color='Green', ax=ax, alpha=0.5))\n",
+    "# hare_data.plot('date', '# Indiv', ax=ax, alpha=0.3, color='grey');"
    ]
   },
   {
@@ -922,7 +1016,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with ts_model:\n",
+    "with hare_model:\n",
     "    pred_trace = pm.sample_posterior_predictive(trace, samples=500)"
    ]
   },
@@ -932,7 +1026,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(100*pred_trace['like'].T, color='g', alpha=0.01);"
+    "plt.plot(hare_data.index, pred_trace['like'].T, color='g', alpha=0.01);"
    ]
   },
   {
@@ -943,9 +1037,9 @@
     "\n",
     "**Go ahead and run this model while you read--it takes a few minutes to fit.**\n",
     "\n",
-    "The basic structured time series model was problematic to fit partly because it is trying to do a lot. It is obvious that there is a periodic effect in the data-generatimg model, and we are trying to make the autoregressive component account for this as well as the (linear?) trend in the mean that is independent of the seasonality.\n",
+    "The basic structured time series models can be problematic to fit partly because it is trying to do a lot. For example, is obvious (particularly in the airline data) that there is a periodic effect in the data-generatimg model, and we are trying to make the autoregressive component account for this as well as the (linear?) trend in the mean that is independent of the seasonality.\n",
     "\n",
-    "Thus, it is wise to add an explicit seasonality component to the model, which will allow the AR(1) component to look after the trend. There are several commonly used state-component models to capture seasonality. \n",
+    "Thus, it is wise to add an explicit seasonality component to the model, which will allow the AR(1) component to look after the trend. There are several commonly used state-component models to capture seasonality. For example:\n",
     "\n",
     "$$\\begin{split} & y_t = \\tau_t +\\epsilon_t, \\\\ & \\tau_{t+d} = - \\sum_{i=0}^{s-2}\\tau_{t-i\\times d} + \\eta_{\\tau, t}, \\end{split}$$\n",
     "\n",
@@ -979,6 +1073,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "T = air_passengers.shape[0]\n",
+    "\n",
     "with pm.Model() as ts_model_seasonal:\n",
     "    \n",
     "    # Standard deviations\n",
@@ -1163,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
