Added golf example to GP notebook

--- a/notebooks/Section5_1-Gaussian_Processes.ipynb
+++ b/notebooks/Section5_1-Gaussian_Processes.ipynb
@@ -15,6 +15,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import warnings\n",
+    "import io\n",
+    "\n",
+    "warnings.simplefilter(action='ignore')\n",
+    "os.environ['MKL_NUM_THREADS'] = '1'\n",
+    "os.environ['OPENBLAS_NUM_THREADS'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import scipy as sp\n",
@@ -26,9 +41,7 @@
     "import matplotlib.pylab as plt\n",
     "import matplotlib.cm as cmap\n",
     "import arviz as az\n",
-    "import warnings\n",
     "\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "theano.config.gcc.cxxflags = \"-Wno-c++11-narrowing\"\n",
     "sns.set_context('notebook')"
    ]
@@ -1012,6 +1025,212 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Robust regession\n",
+    "\n",
+    "The following is an example showing how to specify a simple model with a GP prior using the `gp.Latent` class.  So we can verify that the inference we perform is correct, the data set is made using a draw from a GP.  \n",
+    "\n",
+    "This will be identical to the simulated example from the latent GP section, except that the noise is Student-T distributed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100 # The number of data points\n",
+    "X = np.linspace(0, 10, n)[:, None] # The inputs to the GP, they must be arranged as a column vector\n",
+    "\n",
+    "# Define the true covariance function and its parameters\n",
+    "ℓ_true = 1.0\n",
+    "η_true = 3.0\n",
+    "cov_func = η_true**2 * pm.gp.cov.Matern52(1, ℓ_true)\n",
+    "\n",
+    "# A mean function that is zero everywhere\n",
+    "mean_func = pm.gp.mean.Zero()\n",
+    "\n",
+    "# The latent function values are one sample from a multivariate normal\n",
+    "# Note that we have to call `eval()` because PyMC3 built on top of Theano\n",
+    "f_true = np.random.multivariate_normal(mean_func(X).eval(), \n",
+    "                                       cov_func(X).eval() + 1e-8*np.eye(n), 1).flatten()\n",
+    "\n",
+    "# The observed data is the latent function plus a small amount of T distributed noise\n",
+    "# The standard deviation of the noise is `sigma`, and the degrees of freedom is `nu`\n",
+    "σ_true = 2.0\n",
+    "ν_true = 3.0\n",
+    "y = f_true + σ_true * np.random.standard_t(ν_true, size=n)\n",
+    "\n",
+    "## Plot the data and the unobserved latent function\n",
+    "fig = plt.figure(figsize=(12,5)); ax = fig.gca()\n",
+    "ax.plot(X, f_true, \"dodgerblue\", lw=3, label=\"True f\");\n",
+    "ax.plot(X, y, 'ok', ms=3, label=\"Data\");\n",
+    "ax.set_xlabel(\"X\"); ax.set_ylabel(\"y\"); plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A latent GP is constructed using `gp.Latent`, passing a covariance function as an argument (and, optionally, a mean function).\n",
+    "\n",
+    "To parameterize it, we specify:\n",
+    "\n",
+    "- $\\text{Gamma}(2, 1)$ prior over the lengthscale parameter;\n",
+    "- weakly informative $\\text{HalfCauchy}(5)$ priors over the covariance function scale, and noise scale;\n",
+    "- $\\text{Gamma}(2, 0.1)$ prior for the degrees of freedom parameter of the noise.  \n",
+    "\n",
+    "Finally, a GP prior via `gp.prior` is placed on the unknown function.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model() as robust_model:\n",
+    "    ℓ = pm.Gamma(\"ℓ\", alpha=2, beta=1)\n",
+    "    η = pm.HalfCauchy(\"η\", beta=5)\n",
+    "    \n",
+    "    cov = η**2 * pm.gp.cov.Matern52(1, ℓ)\n",
+    "    gp = pm.gp.Latent(cov_func=cov)\n",
+    "    \n",
+    "    f = gp.prior(\"f\", X=X)\n",
+    "    \n",
+    "    σ = pm.HalfCauchy(\"σ\", beta=1)\n",
+    "    ν = pm.Gamma(\"ν\", alpha=2, beta=0.1)\n",
+    "    y_ = pm.StudentT(\"y\", mu=f, lam=1.0/σ, nu=ν, observed=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To demonstrate variational inference, let's call `fit` instead of sample, and use full-rank ADVI as our fitting method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with robust_model:\n",
+    "    \n",
+    "    approx_gp = pm.fit(10000, method='advi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This yields an approximation, from which we can draw samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with robust_model:\n",
+    "    \n",
+    "    trace = approx_gp.sample(500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are the posteriors of the covariance function hyperparameters.  The red lines show the true values that were used to draw the function from the GP."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.plot_trace(trace, \n",
+    "             var_names=[\"η\", \"σ\", \"ℓ\", \"ν\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the results\n",
+    "fig = plt.figure(figsize=(12,5)); ax = fig.gca()\n",
+    "\n",
+    "# plot the samples from the gp posterior with samples and shading\n",
+    "from pymc3.gp.util import plot_gp_dist\n",
+    "plot_gp_dist(ax, trace[\"f\"], X);\n",
+    "\n",
+    "# plot the data and the true latent function\n",
+    "plt.plot(X, f_true, \"dodgerblue\", lw=3, label=\"True f\");\n",
+    "plt.plot(X, y, 'ok', ms=3, alpha=0.5, label=\"Observed data\");\n",
+    "\n",
+    "# axis labels and title\n",
+    "plt.xlabel(\"X\"); plt.ylabel(\"True f(x)\"); \n",
+    "plt.title(\"Posterior distribution over $f(x)$ at the observed values\"); plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise: Golf putting\n",
+    "\n",
+    "Use a latent GP to model the golf putting data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# golf putting data from berry (1996)\n",
+    "golf_data = \"\"\"distance tries successes\n",
+    "2 1443 1346\n",
+    "3 694 577\n",
+    "4 455 337\n",
+    "5 353 208\n",
+    "6 272 149\n",
+    "7 256 136\n",
+    "8 240 111\n",
+    "9 217 69\n",
+    "10 200 67\n",
+    "11 237 75\n",
+    "12 202 52\n",
+    "13 192 46\n",
+    "14 174 54\n",
+    "15 167 28\n",
+    "16 201 27\n",
+    "17 195 31\n",
+    "18 191 33\n",
+    "19 147 20\n",
+    "20 152 24\"\"\"\n",
+    "\n",
+    "\n",
+    "golf_data = pd.read_csv(io.StringIO(golf_data), sep=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Faster Gaussian processes\n",
     "\n",
     "One of the major constraints that limits the utility of Gaussian processes in practice is the inversion of $K$ when calculating the posterior covariance. Since it is evaluated at every observed data point, its execution time is $\\mathcal{O(n^3)}$, which makes Gaussian processes (in the form I have presented here) impractical for larger datasets.\n",
@@ -1373,7 +1592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
