Added marathon times exercise

--- a/notebooks/Section5_1-Gaussian_Processes.ipynb
+++ b/notebooks/Section5_1-Gaussian_Processes.ipynb
@@ -1395,6 +1395,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercise: Marathon times\n",
+    "\n",
+    "The 2015 Boston Marathon had 26,598 finishers, whose ages ranged from late-teens to mid-80's. Construct a GP model that predicts finishing time by age. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marathon_results = pd.read_csv('../data/marathon_results_2015.csv', index_col=0)[['Age', 'M/F', 'Official Time']]\n",
+    "marathon_results['time_hours'] = pd.to_timedelta(marathon_results['Official Time']).dt.seconds / 3600\n",
+    "marathon_results['female'] = marathon_results['M/F']=='F'\n",
+    "marathon_results = marathon_results[['Age', 'female', 'time_hours']].rename({'Age':'age'}, axis=1)\n",
+    "marathon_results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,8))\n",
+    "sns.scatterplot('age', 'time_hours', hue='female', data=marathon_results, alpha=0.3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write your solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Multidimensional GP\n",
     "\n",
     "Until now, our examples have been of 1-dimensional Gaussian processes, where there is just a single predictor variable thought to have a non-linear relationship to the outcome. Let's look at a real-world dataset that involves two predictors. We will use the famous **Walker Lake dataset (Isaaks & Srivistava 1989)** that involves spatial sampling of minerals and other variables over space. The data consist of two spatial coordinates and three measured outcomes. The outcomes are anonymously labeled as U, V (continuous variables, such as concentrarion) and T (discrete variable, such as the presence of a particular element). "
