Add version check to NB

--- a/notebooks/Section0-Pre_Work.ipynb
+++ b/notebooks/Section0-Pre_Work.ipynb
@@ -33,6 +33,7 @@
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "import pymc3 as pm\n",
+    "assert pm.__version__ == '3.9.2'\n",
     "import sklearn as sk\n",
     "import seaborn as sns\n",
     "\n",
