--- a/notebooks/Section1_1-Basic_Bayes.ipynb
+++ b/notebooks/Section1_1-Basic_Bayes.ipynb
@@ -9033,7 +9033,7 @@
     "editable": true
    },
    "source": [
-    "## Two Groups with Continiuous Outcome\n",
+    "## Two Groups with Continuous Outcome\n",
     "\n",
     "To illustrate how this Bayesian estimation approach works in practice, we will use a fictitious example from Kruschke (2012) concerning the evaluation of a clinical trial for drug evaluation. The trial aims to evaluate the efficacy of a \"smart drug\" that is supposed to increase intelligence by comparing IQ scores of individuals in a treatment arm (those receiving the drug) to those in a control arm (those recieving a placebo). There are 47 individuals and 42 individuals in the treatment and control arms, respectively."
    ]
